bk_ida/gccida/c3/save_call_clobbered_regs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:828:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:829:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:842:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:869:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v52; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:924:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v107[66]; // [rsp+30h] [rbp-108h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:956:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v13 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:957:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE10); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:958:42: error: use of undeclared identifier 'xmm'
v15 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE40); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:996:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v24 = ( ( unsigned int)( mode_class_0[BYTE2( v22)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1031:42: error: use of undeclared identifier 'xmm'
v15 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE40); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1032:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE10); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1033:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v13 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1054:61: error: use of undeclared identifier 'xmm'
v32 = _mm_add_epi32( _mm_shuffle_epi32( v31, 80), ( __m128i)xmm*(short *)0x65AE30); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1055:7: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'HARD_REG_ELT_TYPE' (aka 'unsigned long long') of different size
v33 = ( __m128i)to; 
      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1058:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v36 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1065:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v39.m128i_i64[0] = si128.m128i_i64[0] << v38.m128i_i8[0]; 
~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1065:25: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v39.m128i_i64[0] = si128.m128i_i64[0] << v38.m128i_i8[0]; 
                   ~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1065:45: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v39.m128i_i64[0] = si128.m128i_i64[0] << v38.m128i_i8[0]; 
                                         ~~~^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/caller-save.c:1066:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v38.m128i_i64[0] = si128.m128i_i64[0] << v40.m128i_i8[0]; 
~~~^~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_call_clobbered_regs/src/obj/caller-save.o] Error 1
